--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 h1 {
   color: #007bff;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 form {
@@ -21,7 +22,8 @@ form {
   margin-bottom: 20px;
 }
 
-input, button {
+input,
+button {
   margin-bottom: 10px;
   padding: 10px;
   font-size: 16px;
@@ -33,7 +35,8 @@ table {
   margin-bottom: 20px;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #ddd;
   padding: 10px;
   text-align: left;
@@ -43,7 +46,8 @@ th {
   background-color: #f2f2f2;
 }
 
-input[type="text"], input[type="number"] {
+input[type='text'],
+input[type='number'] {
   width: 100%;
   box-sizing: border-box;
 }
@@ -57,4 +61,3 @@ button {
 button:hover {
   background-color: #218838;
 }
-
