--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ h1 {
   color: #007bff;
   margin-bottom: 20px;
   text-align: center;
+  font-size: 60px;
 }
 
 form {
@@ -24,8 +25,7 @@ form {
 
 input,
 button {
-  margin-bottom: 10px;
-  padding: 10px;
+  padding: 20px;
   font-size: 16px;
 }
 
